# ROM_Backstep

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_setup.sh  run_test.sh
reference_simulation/0.orig/: U
reference_simulation/constant/: transportProperties
reference_simulation/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
src/: deformation.py  modify_blockMeshDict.py  pod.py  test.py
src/model/: __init__.py  pod_rbf.py
src/utils/: __init__.py  data.py  mesh.py  plotter.py  test_tools.py
